# xlsx2csv

./: .clang-format  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  COVERAGE_ANALYSIS.md  FINAL_DELIVERY.md  FINAL_REPORT.md  FINAL_STATUS.md  FIXES_SUMMARY.md  GIT_COMMIT_MESSAGE.txt  IMPLEMENTATION_STATUS.md  Makefile  PROJECT_SUMMARY.md  README.md  TESTING.md  TEST_COMPATIBILITY_REPORT.md  TEST_REPORT.md  test_stats.sh
python/: xlsx2csv_python.py
src/: csv_writer.c  csv_writer.h  format_handler.c  format_handler.h  main.c  thread_pool.c  thread_pool.h  utils.c  utils.h  xlsx2csv.c  xlsx2csv.h  xml_parser.c  xml_parser.h  zip_reader.c  zip_reader.h
test/: generate_test_data.py  test_runner.sh
test/test_data/: basic.xlsx  boolean.xlsx  date_time.xlsx  empty.xlsx  etfx_template.xlsx  long_strings.xlsx  mixed_empty.xlsx  numbers.xlsx  stock_data_1107.xlsx  unicode_extended.xlsx  utf8_test.xlsx
tests/: README.md  generate_test_data.py  test_runner.sh
tests/test_data/: basic.xlsx  boolean.xlsx  date_time.xlsx  empty.xlsx  escaping.xlsx  etfx_template.xlsx  excel_errors.xlsx  extreme_numbers.xlsx  financial_report.xlsx  float_format.xlsx  formulas.xlsx  long_strings.xlsx  mixed_empty.xlsx  multisheet.xlsx  multisheet_complex.xlsx  number_formats.xlsx  numbers.xlsx  percentage.xlsx  portfolio_tracking.xlsx  sector.xlsx  special_chars.xlsx  stock_data_1107.xlsx  stock_data_1121.xlsx  unicode_extended.xlsx
